--- a/ems/views/footer.ejs
+++ b/ems/views/footer.ejs
@@ -1,7 +1,14 @@
 <!-- Footer Page -->
+<%- include("header") %>
 
-<hr>
+        
 
-<footer>
-    <p>© Company 2021</p>
-</footer>
+        <footer class="bg-dark">
+
+            <hr>
+            <p><b>© Company 2021</b></p>
+
+        </footer>
+
+    </body>
+</html>
