--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -2,8 +2,18 @@
 <%- include("navbar") %>
 <%- include("scripts") %>
 
-<h2><b><%= title %></b></h2>
+<br><br>
 
+<div class="main">
+    <div class="container">
+        <div class="jumbotron">
+            <div class="container">
+            <h1><%= headliner %></h1>
+        </div>
+        </div>
+    </div>
+</div>
 
+<br>
 
 <%- include("footer") %>
